# libzmtp

./: .gitignore  .travis.yml  AUTHORS  Makefile.am  README.md  configure.ac
include/: zmtp.h  zmtp_connection.h  zmtp_dealer.h  zmtp_msg.h  zmtp_prelude.h
src/: Makefile.am  libzmtp.pc.in  zmtp_channel.c  zmtp_channel.h  zmtp_classes.h  zmtp_connection.c  zmtp_connection.h  zmtp_dealer.c  zmtp_endpoint.c  zmtp_endpoint.h  zmtp_ipc_endpoint.c  zmtp_ipc_endpoint.h  zmtp_msg.c  zmtp_selftest.c  zmtp_tcp_endpoint.c  zmtp_tcp_endpoint.h
